\name{NEWS}
\title{News for package `pomp'}
\section{Changes in \pkg{pomp} version 0.54-1}{
  \itemize{
    \item A modified version of the Liu and West (2001) algorithm is included as \code{bsmc2}.
    \item By default, when \code{B} is of class \code{bsmcd.pomp}, \code{plot(B)} ignores fixed parameters.
  }
}
\section{Changes in \pkg{pomp} version 0.53-6}{
  \itemize{
    \item A bug having to do with paths to the temporary C files, encountered when using \code{Csnippet}s under windows, has been fixed.
    \item Package demos are now checked by \code{R CMD check} on all platforms.
  }
}
\section{Changes in \pkg{pomp} version 0.53-1}{
  \itemize{
    \item \code{nlf} now returns an S4 object of class \code{nlfd.pomp} with a \code{logLik} method for extracting the log quasi likelihood and a \code{$} method for extracting arbitrary components.
    \item The \code{transform} argument (for providing a function to transform the data) has been removed in favor of \code{transform.data}.
  }
}
\section{Changes in \pkg{pomp} version 0.52-1}{
  \itemize{
    \item The new \code{mifList} class facilitates approaches based on multiple \code{mif} runs.
    The \code{c} method constructs \code{mifList}s from \code{mif}s.
    The \code{plot} method produces diagnostic plots.
    \item \code{compare.mif} is now deprecated in favor of \code{plot} applied to a \code{mif} or \code{mifList}.
  }
}
\section{Changes in \pkg{pomp} version 0.51-3}{
  \itemize{
    \item \code{transform} argument for \code{pmcmc} and \code{abc} has been removed.
  }
}
\section{Changes in \pkg{pomp} version 0.51-2}{
  \itemize{
    \item More informative error messages are generated when a needed variable cannot be found.
    \item Features that facilitate multiple ABC chains have been added.
    There is a \code{c} method to combine \code{abc} objects into an \code{abcList} object and to combine \code{abcList} objects.